--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@ Uric acid crystals, infections or underlying disease, such as psoriasis or lupus
    </script>
    <h2 style="text-align: center"> Fill this Contact Form </h2>
    <div class="form-container">
-   <form id="contactform" action="https://formspree.io/f/xrgvngog"
+   <form id="contactform" action="https://formspree.io/f/xeqvnlve"
    name="myForm" onsubmit="return(validate())" method="post">
    
    <div class="input-cnt">
